<resources>
    <string name="app_name">心康患者版</string>
    <string name="action_bar_main">心脏康复管理中心(患者版)</string>
    <string name="title_home">今日</string>
    <string name="title_signup">到场签到</string>
    <string name="title_activity">关爱活动</string>
    <string name="title_myprofile">我的</string>
    <string name="title_activity_login">登录</string>
    <string name="main_repeat">操作太快，请稍后重试</string>
    <string name="permission_camera">需要授权访问相机</string>
    <string name="opening_camera">正在打开相机</string>
    <string name="please_wait">请稍候...</string>


    <!-- Strings related to login -->
    <string name="prompt_user_id">用户编号</string>
    <string name="prompt_phone_number">电话号码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user_id">无效用户编号</string>
    <string name="error_invalid_phone_number">无效电话号码</string>
    <string name="error_incorrect_phone_number">编号与电话号码不匹配</string>
    <string name="error_field_required">必填项</string>
    <string name="permission_rationale">"需要授权读取联系人信息"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Today page -->
    <string name="today_call_doctor">呼叫医生</string>
    <string name="today_health_index">健康指数</string>
    <string name="today_measure">一键测量</string>
    <string name="today_plan">心脏计划</string>
    <string name="today_result">检查结果</string>
    <string name="today_heart_rate">心率/心电</string>
    <string name="today_blood_pressure_high">血压/高</string>
    <string name="today_blood_pressure_low">血压/低</string>
    <string name="today_heart_rate_show">心率</string>

    <!-- Signup Page -->
    <string name="signup_success">签到成功</string>

    <!-- Care Activity Page -->
    <string name="careact_signup">点击报名</string>
    <string name="careact_showinfo"> \n
                                    时间：2018.8.23 - 8.30 \n
                                         15:00 - 17:00 \n
                                    地点：中心会议厅 \n
                                    内容：中医五禽戏对心脏的康复锻炼（讲解+锻炼）\n
                                    主讲：广州中医药大学 \n
    </string>
    <string name="careact_signup_success">您已成功抢座</string>

    <!-- Mine Page -->
    <string name="mine_modify_info">更新信息</string>
    <string name="mine_add_wechat">绑定微信</string>
    <string name="mine_phone_info">电话已绑定：</string>
    <string name="mine_email_info">邮箱已绑定：</string>
    <string name="mine_modify_info_feedback">Demo版不支持</string>

    <!-- Call Doctor page -->
    <string name="call_doctor_title">呼叫医生</string>

    <!-- Measurement page -->
    <string name="measurement_title">一键测量</string>
    <string name="measurement_heart_rate">心率：75</string>
    <string name="measurement_blood_pressure">血压：120/80 mmHg</string>
    <string name="measurement_send_to_doctor">发送报告</string>
    <string name="measurement_measure">一键测量</string>

    <!-- Plan page -->
    <string name="plan_title">心脏计划</string>
    <string name="plan_details_title">你的计划</string>
    <string name="plan_details_content">心脏养护关爱1号套餐</string>
    <string name="plan_finished">已完成：60%</string>
    <string name="plan_remained">套餐剩余：15天</string>
    <string name="plan_other_title">其他计划</string>
    <string name="plan_type_1">心脏养护关爱套餐%d号</string>
    <string name="plan_content">
        套餐介绍：关爱您的心脏，祝您早日康复！\n
        套餐为期%d天，价格%d元
    </string>
    <string name="plan_type_2">心脏加油%d号套餐</string>
    <string name="plan_purchase">订购</string>
    <string name="plan_purchase_again">续订</string>
    <string name="plan_pay">确认支付</string>
    <string name="plan_cancel_pay">取消</string>
    <string name="plan_call_pay_platform">调用第三方支付平台</string>


    <!-- Check result page -->
    <string name="check_result_title">检查结果</string>
    <string name="check_result_uploaded">我的已上传：</string>
    <string name="check_result_eeg">心电图</string>
    <string name="check_result_blood_lipid">血脂</string>
    <string name="check_result_blood_rt">血常规</string>
    <string name="check_result_my_result">我的检查:</string>
    <string name="check_result_eeg_monitor">心电监测</string>
    <string name="check_result_upload">上传</string>
    <string name="check_result_upload_feedback">Demo版不支持</string>

    <!-- Heart rate page -->
    <string name="heart_rate_title">心率心电</string>
</resources>
