<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CheckResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_check_result_upload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_selector"
            android:onClick="onClickUploadBtn"
            android:text="@string/check_result_upload"
            android:textColor="@color/txt_white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50px"
            android:orientation="vertical">

            <TextView
                android:id="@+id/check_result_uploaded_textview"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_lightgray"
                android:paddingLeft="10px"
                android:text="@string/check_result_uploaded" />

            <TextView
                android:id="@+id/check_result_eeg_textview"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25px"
                android:text="@string/check_result_eeg" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@color/bg_gray" />

            <TextView
                android:id="@+id/check_result_blood_lipid"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25px"
                android:text="@string/check_result_blood_lipid" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@color/bg_gray" />

            <TextView
                android:id="@+id/check_result_blood_rt"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25px"
                android:text="@string/check_result_blood_rt" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@color/bg_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/check_result_my_result"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_lightgray"
                android:paddingLeft="10px"
                android:text="@string/check_result_my_result" />

            <TextView
                android:id="@+id/check_result_eeg_monitor_textview"
                style="@style/ShowInfoStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25px"
                android:text="@string/check_result_eeg_monitor" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@color/bg_gray" />
        </LinearLayout>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>