<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4px"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/plan_other_item_title_textview"
        style="@style/ShowInfoStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="25px"
        android:layout_marginRight="25px"
        android:layout_weight="1"
        android:text="TextView" />

    <Button
        android:id="@+id/btn_plan_item_purchase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginRight="10px"
        android:text="@string/plan_purchase"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_plan_item_pay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/plan_pay"
        android:visibility="gone" />

    <Button
        android:id="@+id/btn_plan_item_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/plan_cancel_pay"
        android:visibility="gone" />
</LinearLayout>