<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PlanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/plan_title_textview"
            style="@style/ShowInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10px"
            android:background="@color/bg_lightgray"
            android:text="@string/plan_details_title" />

        <TextView
            android:id="@+id/plan_content_textview"
            style="@style/ShowInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25px"
            android:text="@string/plan_details_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plan_finished_textview"
                style="@style/ShowInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_weight="1"
                android:text="@string/plan_finished" />

            <ImageView
                android:id="@+id/plan_finished_imgview"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_gravity="right"
                android:layout_marginRight="80px"
                app:srcCompat="@android:drawable/ic_notification_overlay" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plan_remained_textview"
                style="@style/ShowInfoStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25px"
                android:layout_weight="1"
                android:text="@string/plan_remained" />

            <ImageView
                android:id="@+id/plan_remained_imgview"
                android:layout_width="60px"
                android:layout_height="60px"
                android:layout_gravity="right"
                android:layout_marginRight="80px"
                app:srcCompat="@android:drawable/ic_notification_overlay" />
        </LinearLayout>

        <TextView
            android:id="@+id/plan_other_title"
            style="@style/ShowInfoStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60px"
            android:background="@color/bg_lightgray"
            android:text="@string/plan_other_title" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/plan_other_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>