<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TodayFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/bg_today_green"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/img_btn_call"
                android:layout_width="@dimen/today_call_btn_size"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="15dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                android:src="@drawable/today_call_btn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_lightgray"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/bg_today_green"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/bt_today_info_green"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txtview_pressure_high_title"
                        style="@style/TodayInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today_blood_pressure_high" />

                    <TextView
                        android:id="@+id/txtview_pressure_high_content"
                        style="@style/TodayInfoContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="127mmHg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/bt_today_info_green"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txtview_pressure_low_title"
                        style="@style/TodayInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today_blood_pressure_low" />

                    <TextView
                        android:id="@+id/txtview_pressure_low_content"
                        style="@style/TodayInfoContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="81mmHg" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_weight="1"
                    android:background="@color/bt_today_info_green"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp">

                    <TextView
                        android:id="@+id/txtview_heart_rate_title"
                        style="@style/TodayInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/today_heart_rate_show" />

                    <TextView
                        android:id="@+id/txtview_heart_rate_content"
                        style="@style/TodayInfoContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="79/min" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/txt_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgview_measure_icon"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="5dp"
                    android:src="@drawable/today_measure" />

                <Button
                    android:id="@+id/btn_measure"
                    style="@style/TodayBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/today_measure" />

                <ImageView
                    android:id="@+id/imgview_measure_tail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/item_tail" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/txt_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgview_heart_plan_icon"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_margin="5dp"
                    android:src="@drawable/today_heart_plan" />

                <Button
                    android:id="@+id/btn_today_plan"
                    style="@style/TodayBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/today_plan" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtview_heart_plan_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="已完成：60%" />

                    <TextView
                        android:id="@+id/txtview_heart_plan_remain"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="套餐剩余：15天" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgview_heart_plan_tail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/item_tail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:background="@color/txt_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgview_result"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="5dp"
                    android:src="@drawable/today_result" />

                <Button
                    android:id="@+id/btn_today_result"
                    style="@style/TodayBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/today_result" />

                <TextView
                    android:id="@+id/txtview_result_details"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:gravity="center_vertical|end"
                    android:text="3条" />

                <ImageView
                    android:id="@+id/imgview_result_tail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/item_tail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/txt_white"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgview_heart_rate_icon"
                    android:layout_width="@android:dimen/app_icon_size"
                    android:layout_height="51dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_margin="5dp"
                    android:src="@drawable/today_heart_rate" />

                <Button
                    android:id="@+id/btn_today_heart_rate"
                    style="@style/TodayBtnText"
                    android:layout_width="wrap_content"
                    android:layout_height="@android:dimen/app_icon_size"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/today_heart_rate" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtview_heart_rate_beat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="2dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="72 bpm" />

                    <TextView
                        android:id="@+id/txtview_heart_rate_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end"
                        android:text="良好" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgview_heart_rate_tail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@android:color/transparent"
                    android:src="@drawable/item_tail" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/txt_white"
                android:orientation="horizontal"></LinearLayout>

            </LinearLayout>
    </LinearLayout>

</FrameLayout>